<resources>
    <string name="app_name">Paper Telephone</string>
    <string name="settings">Settings</string>
    <string name="new_game">New Game</string>
    <string name="how_to_play">How To Play</string>
    <string name="welcome_to_paper">Welcome to Paper Telephone, a fun local multiplayer drawing game.
        This game involves three steps: draw an image based on a word, pass the device to the next
        player, and guess the original word associated with the drawing. To begin playing, select
        the New Game button on the home screen.</string>
    <string name="a_canvas_to_draw">A canvas to draw should now be displayed on the screen. Given a
        word to draw, create your work of art by drawing on screen with your finger. Once finished,
        pass the device onto the next player in the group for the next round. This player will now
        try to guess the word that the drawing is based on. Once a guess has been made, pass the
        device again to the next player in line and create a drawing based on the guess
        of the previous person.</string>
    <string name="this_cycle_repeats">This cycle repeats until the device comes back to the player
        who initiated the game, or the number of chosen rounds has been reached. At this point,
        the game ends and a montage of the word\'s transformation will be shown.</string>
    <string name="pick_color">Pick Color</string>
    <string name="_60">:%1$d</string>
    <string name="start_guessing">Pass the phone to the next player. Press the Check to Continue!</string>
    <string name="stop_drawing">Stop Drawing</string>
    <string name="change_brush_size">Change Brush Size</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="brush_size">Set Brush Size</string>
    <string name="eraser_size">Set Eraser Size</string>
    <string name="brush_size_seek">Brush Size: %1$d px</string>
    <string name="draw_button">Draw %1$s!</string>
    <string name="guess_hint">Enter guess here</string>
    <string name="guess_prompt">Guess the drawing!</string>
    <string name="guess_button">Guess</string>
    <string name="guess_image_desc">Image to guess!</string>
    <string name="erase">Use Eraser</string>
    <string name="brush">Use Paint Brush</string>
    <string name="start_drawing">Start Drawing</string>
    <string name="show_results">Show Results</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="guess_display">guess_display</string>
    <string name="previous_prompt">previous</string>
    <string name="next_prompt">next</string>
    <string name="save_prompt">save</string>
    <string name="paper_telephone">Paper Telephone</string>
    <string name="page_number">%1$d/%2$d</string>
    <string name="difficulty_select">Select Drawing Prompt Difficulty</string>
    <string name="results_title">Thanks for playing!</string>
    <string name="guess_marker">The word was:</string>
    <string name="main_menu_prompt">Main Menu</string>
    <string name="start_new_game_prompt">New Game</string>
</resources>
