<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/colorpicker"
        android:title="@string/pick_color"
        android:icon="@drawable/colorpicker"
        app:showAsAction="always" />
    <item
        android:id="@+id/brushsize"
        android:title="@string/change_brush_size"
        android:icon="@drawable/brush"
        app:showAsAction="always"/>
    <item
        android:id="@+id/erase"
        android:title="@string/erase"
        android:icon="@drawable/erasure"
        app:showAsAction="always"/>
    <item
        android:id="@+id/stopdrawing"
        android:title="@string/stop_drawing"
        android:icon="@drawable/timeroff"
        app:showAsAction="ifRoom"/>
</menu>