<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_how_to_play"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cs371m.papertelephone.HowToPlayActivity">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        app:srcCompat="@drawable/pallete" />

    <TextView
        android:id="@+id/welcome_to_paper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_paper"
        android:layout_marginBottom="5dp"
        android:textSize="15sp"/>
    <TextView
        android:id="@+id/a_canvas_to_draw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_canvas_to_draw"
        android:layout_marginBottom="5dp"
        android:textSize="15sp"/>
    <TextView
        android:id="@+id/this_cycle_repeats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/this_cycle_repeats"
        android:layout_marginTop="1dp"
        android:textSize="15sp"/>


</LinearLayout>
