<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <cs371m.papertelephone.CircleView
        android:id="@+id/circleview"
        android:layout_width="wrap_content"
        android:layout_height="157dp"
        android:layout_gravity="center" />

    <SeekBar
        android:id="@+id/brushSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/brushseektext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/brush_size_seek"
        android:layout_marginTop="20dp"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/okbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?attr/borderlessButtonStyle"
            android:text="@string/ok" />

        <Button
            android:id="@+id/cancelbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?attr/borderlessButtonStyle"
            android:text="@string/cancel" />
    </LinearLayout>


</LinearLayout>