<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cs371m.papertelephone.MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:background="@color/main_activity_green"
        android:onClick="startHowTo"
        android:text="@string/how_to_play"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:layout_below="@+id/new_game"
        android:layout_alignLeft="@+id/new_game"
        android:layout_alignStart="@+id/new_game" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="false"
        app:srcCompat="@drawable/telepictionary"
        android:background="#000000"
        android:padding="5dp"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/new_game"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/main_activity_green"
        android:text="@string/new_game"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:onClick="startNewGame"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/how_to_play"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_below="@+id/button"
        android:layout_marginTop="11dp"
        android:background="@color/main_activity_green"
        android:onClick="startSettings"
        android:text="@string/settings"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paper_telephone"
        android:textSize="40sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
