<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    tools:context="cs371m.papertelephone.GuessingActivity">

    <EditText
        android:id="@+id/guess_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@id/time_button"
        android:hint="@string/guess_hint"
        android:imeOptions="actionDone"
        android:inputType="text" />

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_gravity="top|right"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/timer_off"
        app:fab_label="@string/stop_drawing"
        app:fab_progress="100"
        app:fab_progress_color="@color/orange"
        app:fab_progress_max="100" />

    <!--<Button-->
        <!--android:id="@+id/guess_button"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignBottom="@+id/guess_input"-->
        <!--android:layout_toLeftOf="@+id/timerText"-->
        <!--android:onClick="guessButtonClicked"-->
        <!--android:text="@string/guess_button"-->
        <!--android:textSize="18sp" />-->

    <!--<TextView-->
        <!--android:id="@+id/timerText"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:text="@string/_60"-->
        <!--android:textSize="30sp" />-->

    <com.rd.PageIndicatorView
        android:id="@+id/guess_page_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/guess_input"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/guess_page_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/guess_input"
        android:layout_centerInParent="true"
        android:text="@string/page_number"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/guess_image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/guess_page_indicator"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/guess_image_desc" />


</RelativeLayout>